// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadItemWrapper should render ltr correctly with 10 items 1`] = `
.emotion-0 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-6 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-6 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-6 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-6 {
    min-width: 2rem;
  }
}

.emotion-8 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-10 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    padding-right: 0;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-12:hover,
.emotion-12:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-12:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-12 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-12 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-12 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  }
}

@media (max-width: 14.9375rem) {
  .emotion-20 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-20 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-20 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-20 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-20 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-62 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-62 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-62 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-62 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-62 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-62 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-62 {
    min-width: 4rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-76 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-76 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-76 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-76 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-76 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-90 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-90 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-90 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-90 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-90 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-90 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-90 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-132 {
    min-width: 2.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-132 {
    min-width: 2.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-132 {
    min-width: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-132 {
    min-width: 4rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-132 {
    min-width: 4rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-132 {
      min-width: 4rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-132 {
    min-width: 4rem;
  }
}

<div>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          1
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-20 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          2
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          3
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-20 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          4
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-62 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          5
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-76 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          6
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-90 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          7
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-76 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          8
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-90 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          9
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="ltr"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-132 emotion-7"
        dir="ltr"
      >
        <span
          class="emotion-8 emotion-9"
        >
          10
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="ltr"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadItemWrapper should render rtl correctly with 10 items 1`] = `
.emotion-0 {
  position: relative;
  padding-bottom: 1.5rem;
}

@media (max-width:14.9375rem) {
  .emotion-2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-2 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-2 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-2 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-2 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-2 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-2 {
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width:80rem) {
    .emotion-2 {
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-6 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-6 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-6 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-6 {
    min-width: 1.5rem;
  }
}

.emotion-8 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

.emotion-10 {
  padding-top: 0.375rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    padding-left: 0;
  }
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.emotion-12:hover,
.emotion-12:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-12:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-12 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-12 {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-12 {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  }
}

@media (max-width: 14.9375rem) {
  .emotion-20 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-20 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-20 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-20 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-20 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-62 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-62 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-62 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-62 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-62 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-62 {
      min-width: 1.5rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-62 {
    min-width: 2rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-76 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-76 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-76 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-76 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-76 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-76 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-90 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-90 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-90 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-90 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-90 {
    min-width: 1.5rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-90 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-90 {
    min-width: 1.5rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-132 {
    min-width: 1rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-132 {
    min-width: 1.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-132 {
    min-width: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-132 {
    min-width: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-132 {
    min-width: 2rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  @media (min-width: 37.5rem) {
    .emotion-132 {
      min-width: 2rem;
    }
  }
}

@media (min-width: 80rem) {
  .emotion-132 {
    min-width: 2rem;
  }
}

<div>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۱
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-20 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۲
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-6 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۳
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-20 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۴
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-62 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۵
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-76 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۶
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-90 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۷
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-76 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۸
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-90 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۹
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 emotion-3"
    dir="rtl"
    role="listitem"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <div
        class="emotion-132 emotion-7"
        dir="rtl"
      >
        <span
          class="emotion-8 emotion-9"
        >
          ۱۰
        </span>
      </div>
      <div
        class="emotion-10 emotion-11"
        dir="rtl"
      >
        <a
          class="emotion-12 emotion-13"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadLink should render ltr correctly 1`] = `
.emotion-0 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    padding-right: 0;
  }
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-2 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <a
      class="emotion-2 emotion-3"
      href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
    >
      Could a computer ever create better art than a human?
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render rtl correctly 1`] = `
.emotion-0 {
  padding-top: 0.375rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    padding-left: 0;
  }
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-2 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-2 {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="rtl"
  >
    <a
      class="emotion-2 emotion-3"
      href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
    >
      لماذا يخجل البعض من اسم قريته في مصر؟
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render with last updated date correctly 1`] = `
.emotion-0 {
  padding-top: 0.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    padding-right: 0;
  }
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

@media (min-width: 25rem) {
  .emotion-2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }

  @media (min-width: 20rem) and (max-width: 37.4375rem) {
    .emotion-2 {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }
  }

  @media (min-width: 37.5rem) {
    .emotion-2 {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  }
}

.emotion-4 {
  padding-top: 0.5rem;
}

.emotion-6 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <a
      class="emotion-2 emotion-3"
      href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
    >
      Could a computer ever create better art than a human?
    </a>
    <div
      class="emotion-4 emotion-5"
    >
      <time
        class="emotion-6 emotion-7"
        datetime="2019-03-01T14:00+00:00"
      >
        Last updated: 5th November 2016
      </time>
    </div>
  </div>
</div>
`;
